feat: alterações em domain, rotas e banco de Requirement, Iteration e BacklogResponseDTO